--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "apollo-client": "^2.0.1",
     "apollo-link-http": "^1.1.0",
     "axios": "^0.16.2",
+    "dotenv": "^6.0.0",
     "graphql": "^0.11.7",
     "graphql-tag": "^2.5.0",
     "json-loader": "^0.5.7",
+    "pouchdb": "^7.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.0.0",
     "react-apollo": "^2.0.0",
