--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": "airbnb",
   "parser": "babel-eslint",
   "rules": {
+    "jsx-a11y/label-has-for": 0,
     "prefer-destructuring": 1,
     "react/no-did-update-set-state": 1,
     "newline-per-chained-call": 1,
