--- a/.eslintrc
+++ b/.eslintrc
@@ -106,6 +106,7 @@
   },
   "globals": {
     "document": true,
+    "Image": true,
     "__APOLLO_STATE__": true,
     "module": true,
     "window": true,
