--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql": "^0.11.7",
     "graphql-tag": "^2.5.0",
     "json-loader": "^0.5.7",
+    "particlesjs": "^2.2.3",
     "pouchdb": "^7.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.0.0",
