--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^16.0.0",
     "react-apollo": "^2.0.0",
     "react-dom": "^16.0.0",
+    "react-helmet": "^5.2.1",
     "react-hot-loader": "^4.3.11",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
